<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/udacious_blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/UdaciousButton"
        android:text="@string/spotify_streamer"
        android:id="@+id/button_sptifyStreamer"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        />

    <Button
        style="@style/UdaciousButton"
        android:text="@string/scores_app"
        android:id="@+id/button_scoresApp"
        android:layout_below="@+id/button_sptifyStreamer"
        android:layout_alignLeft="@+id/button_sptifyStreamer"
        android:layout_alignStart="@+id/button_sptifyStreamer"
        android:layout_alignRight="@+id/button_sptifyStreamer"
        android:layout_alignEnd="@+id/button_sptifyStreamer" />

    <Button
        style="@style/UdaciousButton"
        android:text="@string/library_app"
        android:id="@+id/button_libraryApp"
        android:layout_below="@+id/button_scoresApp"
        android:layout_alignLeft="@+id/button_scoresApp"
        android:layout_alignStart="@+id/button_scoresApp"
        android:layout_alignRight="@+id/button_scoresApp"
        android:layout_alignEnd="@+id/button_scoresApp" />

    <Button
        style="@style/UdaciousButton"
        android:text="@string/build_it_bigger"
        android:id="@+id/button_buildItBigger"
        android:layout_below="@+id/button_libraryApp"
        android:layout_alignLeft="@+id/button_libraryApp"
        android:layout_alignStart="@+id/button_libraryApp"
        android:layout_alignRight="@+id/button_libraryApp"
        android:layout_alignEnd="@+id/button_libraryApp" />

    <Button
        style="@style/UdaciousButton"
        android:text="@string/xyz_reader"
        android:id="@+id/button_xyzReader"
        android:layout_below="@+id/button_buildItBigger"
        android:layout_alignLeft="@+id/button_buildItBigger"
        android:layout_alignStart="@+id/button_buildItBigger"
        android:layout_alignRight="@+id/button_buildItBigger"
        android:layout_alignEnd="@+id/button_buildItBigger" />

    <Button
        style="@style/UdaciousButton"
        android:text="@string/capstone"
        android:id="@+id/button_capstone"
        android:background="@android:color/holo_red_light"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/button_xyzReader"
        android:layout_alignLeft="@+id/button_xyzReader"
        android:layout_alignStart="@+id/button_xyzReader"
        android:layout_alignRight="@+id/button_xyzReader"
        android:layout_alignEnd="@+id/button_xyzReader" />

</RelativeLayout>
